# cloudant-python-sdk

./: .bumpversion.cfg  .bumpversion.toml  .gitignore  .pylintrc  .releaserc  .secrets.baseline  .travis.yml  .whitesource  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Jenkinsfile  KNOWN_ISSUES.md  MANIFEST.in  README.md  SECURITY.md  api-changes.md  index.html  pyproject.toml  requirements-dev.txt  requirements-docs.txt  requirements.txt  setup.py  tox.ini
.codeboarding/: API Data Models.md  Base Service Core.md  Changes Feed Follower.md  Cloudant API Client.md  Common SDK Utilities.md  CouchDB Session Authentication.md  on_boarding.md
.github/: CODEOWNERS  dco.yml  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: codeql.yml  docs.yml  static.yml  test.yml
docs/: Authentication.md  Changes_Follower.md  Examples.md  Pagination.md  README.md  latest
docs/0.0.31/: genindex.html  ibmcloudant.html  index.html  modules.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/0.0.32/: genindex.html  ibmcloudant.html  index.html  modules.html  objects.inv  py-modindex.html  search.html  searchindex.js
examples/: README.md
ibmcloudant/: __init__.py  cloudant_base_service.py  cloudant_v1.py  common.py  couchdb_session_authenticator.py  couchdb_session_base_service_patch.py  couchdb_session_get_authenticator_patch.py  couchdb_session_token_manager.py  version.py
scripts/: publish_buildinfo.sh  setup_couch.sh  setup_wiremock.sh
source/: conf.py  index.rst
stubs/: gen-its-mappings.json  mappings.json
(+470 files in other folders)
