[build-system]
requires = ["flit_core >=3.9,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "ibmcloudant"
version = "0.9.2"
description = "Python client library for IBM Cloudant"
dependencies = [
  "ibm_cloud_sdk_core==3.21.0",
  "requests>=2.32.2,<3.0.0",
  "python_dateutil>=2.5.3,<3.0.0",
  "PyJWT>=2.0.1,<3.0.0",
]
authors = [
  { name="IBM", email="cldtsdks@us.ibm.com" },
]
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}
classifiers = [
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Software Development :: Libraries :: Application Frameworks",
]
keywords = [
  "ibmcloudant",
  "Cloudant",
  "IBM",
  "database",
  "client",
  "SDK",
  "official"
]

[project.urls]
"Homepage" = "https://github.com/IBM/cloudant-python-sdk"
"Bug Tracker" = "https://github.com/IBM/cloudant-python-sdk/issues"
